# AudioBytes

./: AudioByte.jucer  README.md
Builds/Android/: local.properties  settings.gradle  settings.gradle.kts
Builds/Android/app/: CMakeLists.txt  build.gradle  build.gradle.kts
Builds/Android/app/src/debug/res/values/: string.xml
Builds/Android/app/src/main/: AndroidManifest.xml
Builds/Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Builds/Android/app/src/main/res/values/: strings.xml  themes.xml
Builds/Android/app/src/main/res/values-night/: themes.xml
Builds/AudioBytes/: settings.gradle.kts
Builds/AudioBytes/app/: build.gradle.kts
Builds/AudioBytes/app/src/main/: AndroidManifest.xml
Builds/AudioBytes/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Builds/AudioBytes/app/src/main/res/layout/: activity_main.xml
Builds/AudioBytes/app/src/main/res/values/: strings.xml  themes.xml
Builds/AudioBytes/app/src/main/res/values-night/: themes.xml
Builds/AudioBytes/gradle/wrapper/: gradle-wrapper.properties
Builds/MacOSX/: Info-App.plist
Builds/MacOSX/AudioByte.xcodeproj/: project.pbxproj
Builds/MacOSX/AudioByte.xcodeproj/project.xcworkspace/xcuserdata/devinharrison.xcuserdatad/: UserInterfaceState.xcuserstate
Builds/MacOSX/AudioByte.xcodeproj/xcuserdata/devinharrison.xcuserdatad/xcschemes/: xcschememanagement.plist
Builds/VisualStudio2022/: AudioByte.sln  AudioByte_App.vcxproj  AudioByte_App.vcxproj.filters  resources.rc
JuceLibraryCode/: JuceHeader.h
Source/: Main.cpp  MainComponent.cpp  MainComponent.h
(+6 files in other folders)
